# QtTrials

./: .gitignore  CMakeLists.txt  README.md  deploy.ps1
Qt3D/: CMakeLists.txt  Qt3DAxis.cpp  Qt3DAxis.h  Qt3DWidget.cpp  Qt3DWidget.h  main.cpp  trackball_camera_controller.cpp  trackball_camera_controller.h
Qt3D2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt3D3/: CMakeLists.txt  QtGLWidget.cpp  QtGLWidget.h  main.cpp  rs.qrc
QtAnimation/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  waitingspinnerwidget.cpp  waitingspinnerwidget.h
QtAspect/: CMakeLists.txt  QtAspectLabel.cpp  QtAspectLabel.h  QtAspectWidget.cpp  QtAspectWidget.h  main.cpp
QtCamera/: CMakeLists.txt  CameraSource.cpp  CameraSource.h  main.cpp  mainCV.cpp
QtConfig/: CMakeLists.txt  main.cpp
QtDebunce/: CMakeLists.txt  QtDebouncer.cpp  QtDebouncer.h  main.cpp
QtDrawOnVideo/: CMakeLists.txt  QtDisplayBoard.cpp  QtDisplayBoard.h  main.cpp
QtDrawOnVideo2/: CMakeLists.txt  FrameWriter.h  ImageViewer.h  main.cpp
QtDrawOnVideo3/: CMakeLists.txt  FrameWriter.h  QtCamera.cpp  QtDisplayBoard.cpp  QtDisplayBoard.h  main.cpp
QtDrawTool/: Board.cpp  Board.h  Board2.cpp  Board2.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
QtFrameHandler/: CMakeLists.txt  QtCamera.cpp  QtCamera.h  QtFrameHandler.cpp  QtFrameHandler.h  QtImageViewer.h  main.cpp
QtGroupBoxWithIcon/: CMakeLists.txt  DecoratedGroupBox.cpp  DecoratedGroupBox.h  main.cpp  resources.qrc
QtImageComparatorSlider/: CMakeLists.txt  QtImageComparatorSlider.cpp  QtImageComparatorSlider.h  main.cpp
QtImageViewer/: CMakeLists.txt  Image.cpp  Image.h  ImageOps.cpp  ImageOps.h  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  MetaData.cpp  MetaData.h  main.cpp
QtImageViewer2/: CMakeLists.txt  CropRubberBand.cpp  CropRubberBand.h  ImageViewer.cpp  ImageViewer.h  ImageWidget.cpp  ImageWidget.h  main.cpp
QtImageViewer3/: CMakeLists.txt  QtRhiViewer.cpp  QtRhiViewer.h  compile_qsb.ps1  main.cpp  (+1 more)
QtMMap/: CMakeLists.txt  Capturer.cpp  Capturer.h  FrameReader.cpp  FrameReader.h  FrameReaderMmap.cpp  FrameReaderMmap.h  FrameReaderSocket.cpp  FrameReaderSocket.h  FrameWriter.cpp  FrameWriter.h  FrameWriterMmap.cpp  FrameWriterMmap.h  FrameWriterSocket.cpp  FrameWriterSocket.h  Issues.md  Viewer.cpp  Viewer.h  Viewer.ui  main.cpp
QtOverlay2/: CMakeLists.txt  Histogram.cpp  Histogram.h  QtCropRubberBandOverlay.cpp  QtCropRubberBandOverlay.h  QtImageHistOverlay.cpp  QtImageHistOverlay.h  QtImageInfoOverlay.cpp  QtImageInfoOverlay.h  QtImageInfoOverlay.ui  QtImageViewer.cpp  QtImageViewer.h  QtOverlayWidget.cpp  QtOverlayWidget.h  QtOverlayWidgetContainer.cpp  QtOverlayWidgetContainer.h  QtZoomableChartView.cpp  QtZoomableChartView.h  main.cpp
QtPlot/: CMakeLists.txt  Plot2D.cpp  Plot2D.h  main.cpp
QtRaw/: CMakeLists.txt  RawIOHandler.cpp  RawIOHandler.hpp  RawPlugin.cpp  RawReader.cpp  RawReader.hpp  kimageformats.md  main.cpp  raw.json
QtRhi/: CMakeLists.txt  QtMesh.cpp  QtMesh.h  QtRhiViewer.cpp  QtRhiViewer.h  compile_qsb.ps1  main.cpp  shader.qrc
QtRhi/shader/: vert.qsb  vert.vert  vert1.qsb  vert1.vert
QtRibbon/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QtRibbon/SARibbonBar/: CMakeLists.txt  SAFramelessHelper.cpp  SAFramelessHelper.h  SARibbonActionsManager.cpp  SARibbonActionsManager.h  SARibbonApplicationButton.cpp  SARibbonApplicationButton.h  SARibbonBar.cpp  SARibbonBar.h  SARibbonBarVersionInfo.h  SARibbonButtonGroupWidget.cpp  SARibbonButtonGroupWidget.h  SARibbonCategory.cpp  SARibbonCategory.h  SARibbonCategoryLayout.cpp  SARibbonCategoryLayout.h  SARibbonCheckBox.cpp  SARibbonCheckBox.h  SARibbonComboBox.cpp  SARibbonComboBox.h  SARibbonContextCategory.cpp  SARibbonContextCategory.h  SARibbonControlButton.cpp  SARibbonControlButton.h  SARibbonCtrlContainer.cpp  SARibbonCtrlContainer.h  SARibbonCustomizeData.cpp  SARibbonCustomizeData.h  SARibbonCustomizeDialog.cpp  SARibbonCustomizeDialog.h  SARibbonCustomizeWidget.cpp  SARibbonCustomizeWidget.h  SARibbonElementFactory.cpp  SARibbonElementFactory.h  SARibbonElementManager.cpp  SARibbonElementManager.h  SARibbonGallery.cpp  SARibbonGallery.h  SARibbonGalleryGroup.cpp  SARibbonGalleryGroup.h  (+32 more)
QtScreenCapturer/: CMakeLists.txt  Capturer.cpp  Capturer.h  Models.cpp  Models.h  ScreenCapturerViewer.ui  Viewer.cpp  Viewer.h  main.cpp
QtSqliteTest/: CMakeLists.txt  README.md  deploy.ps1  main.cpp
QtSysInfo/: CMakeLists.txt  dataqueryengine.cpp  dataqueryengine.h  info.cpp  info_nvapi.cpp  info_pdh.cpp  main.cpp
QtThumbnailViewer/: CMakeLists.txt  cmpviewer.cpp  cmpviewer.hpp  cmpviewer.ui  fileinfoviewer.cpp  fileinfoviewer.hpp  histogram.cpp  histogram.hpp  histviewer.cpp  histviewer.hpp  image2dviewer.cpp  image2dviewer.hpp  imagecomparatorslider.cpp  imagecomparatorslider.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  thumbnailitem.cpp  thumbnailitem.hpp  thumbnailitem.ui  viewer.cpp  viewer.hpp  viewer.ui  zcview.cpp  zcview.hpp
QtTiff/: CMakeLists.txt  main.cpp
QtTilesViewer/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
QtTilesViewer/viewer/: demo.css  demo.html  demo.js  geotiff-tilesource.min.js
QtTilesViewer/viewer2/: demo.html
QtTilesViewer/viewer3/: demo.html
QtUtils/: CMakeLists.txt  QtUtils.cpp  QtUtils.h  main.cpp
QtVolumetric/: CMakeLists.txt  main.cpp  main_example.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vol.cpp  vol.h  volumetric.cpp  volumetric.h
QtWebRTC/: CMakeLists.txt
QtWebRTC/include/: CameraCapturer.h  CameraCapturerTrackSource.h  MainWindow.h  QtVideoWidget.h  VideoCapturer.h  webrtc_headers.h
QtWebRTC/src/: CameraCapturer.cpp  MainWindow.cpp  MainWindow.ui  QtVideoWidget.cpp  VideoCapturer.cpp  main.cpp
QtWidgetRecorder/: CMakeLists.txt  QtWidgetRecorder.cpp  QtWidgetRecorder.h  README.md  Record.cpp  Record.h  Recorder.ui  main.cpp
QtZMQ/: CMakeLists.txt  ZMQClient.cpp  ZMQClient.h  client.py  main.cpp  server.py
Utils/: CMakeLists.txt  ImageFormatConvert.cpp  ImageFormatConvert.h
(+46 files in other folders)
